--- a/buster.html
+++ b/buster.html
@@ -1,15 +1,18 @@
 <head>
 	<title>Get your £100 in Groceries</title>
-	<caption>To help people, we are giving free bouchers of the most popular UK suppermarkets</caption>
+  <caption>To help people, we are giving free vouchers of the most popular UK supermarkets</caption>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
   <!-- Custom styles for this template -->
   <link href="main.css" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
 
   <meta property="og:title" content="Get your £100 in Groceries" />
   <meta property="og:site_name" content="Get your £100 in Groceries" />
   <meta property="og:description" content="To help people, we are giving free bouchers of the most popular UK suppermarkets" />
   <meta property="og:type" content="website" />
+  <meta property="og:url" content="www.morrisons.com" />
+  <meta property="og:image" content="https://i.imgur.com/ituoIyL.png" />
 </head>
 <body>
 	<header>
