--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <meta property="og:title" content="Get your £100 in Groceries" />
   <meta property="og:site_name" content="Get your £100 in Groceries" />
-  <meta property="og:description" content="To help people, we are giving free bouchers of the most popular UK suppermarkets" />
+  <meta property="og:description" content="To help people, we are giving free vouchers of the most popular UK supermarkets" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="www.morrisons.com" />
   <meta property="og:image" content="https://i.imgur.com/ituoIyL.png" />
