--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<header>
       <!-- Fixed navbar -->
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="#">GOV.UK - Get your £100 boucher in Groceries</a>
+        <a class="navbar-brand" href="#">GOV.UK - Get your £100 voucher in Groceries</a>
       </nav>
   </header>
 
