--- a/buster.html
+++ b/buster.html
@@ -111,6 +111,9 @@ But equally, scammers are able to forge or buy these padlocks so seeing one does
 Checking for a padlock should always be combined with the other checks we've recommended.
         </p>
       </ul>
+      <p>
+        <b>Please share with your contacts</b>
+      </p>
     </main>
 
 	<footer class="footer">
